--- a/src/default.template
+++ b/src/default.template
@@ -1,61 +1,125 @@
 --- pipeline:erb,tags,blocks,head
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="{lang:}">
+<!DOCTYPE html><!-- HTML5, for the win! -->
+<html dir="ltr" lang="en-US">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Unifycle Home</title>
-    <meta name="description" content="Unifycle - a unification library for Clojure"/>
-    <meta name="keywords" content="unification, clojure"/>
-    <meta name="author" content="Fogus"/>
-    <meta name="generator" content="webgen - http://webgen.rubyforge.com/"/>
-    <meta name="robots" content="index,follow,archive"/>
+  <title>{title:}</title>
 
-    <link rel="icon" href="http://blog.fogus.me/images/labyrinth.ico" type="image/x-icon"/>
-    <link href="{relocatable: default.css}" rel="stylesheet" type="text/css"/>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="description" content="The Joy of Clojure - bibliography."/>
+  <meta name="keywords" content="book, clojure"/>
+  <meta name="author" content="Fogus"/>
+  <meta name="generator" content="webgen - http://webgen.rubyforge.com/"/>
+  <meta name="robots" content="index,follow,archive"/>
+
+  <link rel="icon" href="http://blog.fogus.me/images/labyrinth.ico" type="image/x-icon"/>
+  <meta charset="UTF-8" />
+
+  <link rel='stylesheet' id='minimatica-css'  href='{relocatable: default.css}' type='text/css' media='all' />
+  <link rel='stylesheet' id='colorbox-css'  href='{relocatable: styles/colorbox.css?ver=0.5}' type='text/css' media='all' />
+  <!--[if lte IE 8]>
+  <link rel='stylesheet' id='minimatica-ie-css'  href='{relocatable: styles/ie.css?ver=1.0}' type='text/css' media='all' />
+  <![endif]-->
+
+  <script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js'></script>
+  <script type='text/javascript' src='{relocatable: js/kwicks.js?ver=1.5.1}'></script>
+  <script type='text/javascript' src='{relocatable: js/minimatica.js?ver=1.0}'></script>
+  <script type='text/javascript' src='{relocatable: js/colorbox.js?ver=1.3.16}'></script>
+
+  <script type="text/javascript">
+  /* <![CDATA[ */
+    jQuery().ready(function() {
+      jQuery('#nav-slider a').live('click', function(e){
+  	e.preventDefault();
+  	var link = jQuery(this).attr('href');
+  	jQuery('#slider').html('<img src="{relocatable: images/loader.gif}" style="display:block; margin:173px auto" />');
+  	jQuery('#slider').load(link+' #ajax-content', function(){
+          slide();
+  	});
+      });
+      jQuery('a.colorbox').colorbox({
+  	maxWidth:900,
+  	maxHeight:600
+      });
+    });
+  /* ]]> */
+  </script>
 </head>
-<body>
-<div id="container"> 
-<div id="title"> 
-  <div class="h1"><h1><span>unifycle</span></h1></div>
-  <div id="intro"> <webgen:block name="content"/> </div> 
-</div> 
-        
-    <div class="titles"><h3><span>example }</span></h3></div> 
-    <div class="section"> <webgen:block name="example"/> </div>
-    
-    <div class="titles"><h3 id="solutions"><span>use }</span></h3></div> 
-    <div class="section"> <webgen:block name="using"/> </div> 
-</div>    
-<!-- end container -->
 
-<span class="version"> <webgen:block name="version"/> </span>
+<body class="single single-post postid-20 single-format-standard">
+  <div id="wrapper" class="hfeed">
+    <header id="header" role="banner">
+      <div id="site-title"><a href="{relocatable: /}" title="The Joy of Clojure" rel="home">The Joy of Clojure</a></div>
+    </header><!-- #header -->
 
-<div id="footer"> 
-    <div id="source"> 
-      <a href="http://github.com/fogus/unifycle"> <h3><span>source</span></h3></a>
-    </div> 
-    <div id="tickets"> 
-      <a href="http://github.com/fogus/unifycle/issues" class="linkage"><h3><span>tickets</span></h3></a>
-    </div>
-    <div id="wiki"> 
-      <a href="http://github.com/fogus/unifycle/wiki" class="linkage"><h3><span>wiki</span></h3></a>
-    </div>
+    <div class="title-container">
+      <h1 class="entry-title">{title:}</h1>
+    </div><!-- .title-container -->
 
-  <span class="copy">©2011-2012 Michael Fogus <br/> Unifycle is released <br/> under the <br/> <a href="http://www.eclipse.org/legal/epl-v10.html">Eclipse Public License</a>.</span> 
-  </div>    
-</div> 
+    <nav id="access" role="navigation">
+      <div id="primary-nav" class="nav">
+	<ul>
+	  <li><a href="{relocatable: /}" rel="home">Home</a></li>
+          <li><a href="http://github.com/joyofclojure/" title="The official JoC source code.">Source</a></li>
+	  <li class="page_item page-item-48"><a href="{relocatable: reviews/}">Reviews</a></li>
+	  <li class="page_item page-item-55"><a href="{relocatable: toc/}">ToC</a></li>
+	  <li class="page_item page-item-50"><a href="{relocatable: buy-joc/}">Buy</a></li>
+	  <li class="page_item page-item-87"><a href="{relocatable: foreword/}">Foreword</a></li>
+	  <li class="page_item page-item-39"><a href="{relocatable: errata/}">Errata</a></li>
+	  <li class="page_item page-item-148"><a href="{relocatable: more/}">More</a></li>
+	</ul>
+      </div><!-- #primary-nav -->
+    </nav><!-- #access -->
 
+    <div id="container">
+      <article id="post-20" class="post-20 post type-post status-publish format-standard hentry category-info">
+	<div id="content">
+	  <div class="entry-header">
+	    <br/>
+	    <img width="460" height="247" src="{image:}" class="attachment-single-thumb wp-post-image" alt="bib" title="bib" />
+	    <aside class="entry-meta">
+	      <ul>
+		<li>Created by <a href="{author_link:}">{author:}</a></li>
+		<li>on <time>{created:}</time></li>
+		<li>modified on <time>{last_modified:}</time></li>
+	      </ul>
+	    </aside><!-- .entry-meta -->
+	    <div class="clear"></div>
+	  </div><!-- .entry-header -->
 
-<script type="text/javascript"> 
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script> 
-<script type="text/javascript"> 
-try {
-var pageTracker = _gat._getTracker("UA-921112-2");
-pageTracker._trackPageview();
-} catch(err) {}
-</script> 
+	  <section class="entry-content">
+	    <webgen:block name="content"/>
+	    <div class="clear"></div>
+	  </section><!-- .entry-content -->
+	  
+	</div><!-- #content -->		
+      </article><!-- .post -->
+      
+      <div id="sidebar" class="widget-area" role="complementary">
+      </div>
+    </div><!-- #sidebar -->		<div class="clear"></div>
+  </div><!-- #container -->
+  
+  <footer id="footer">
+    <!-- Important Links -->
+    <br/>
+    <a href="http://www.amazon.com/o/asin/1935182641?tag=fogus-20"><img src="{relocatable: images/amazon.jpg}"></a>
+    <a href="http://drdobbs.com/joltawards/231500080?pgno=4"><img src="{relocatable: images/jolt11.png}"></a>
+    <a href="http://www.amazon.com/o/asin/1935182641?tag=fogus-20"><img src="http://farm8.staticflickr.com/7122/6985918952_4da37a5856_n_d.jpg"></a>
+    <a href="http://www.heroku.com"><img src="{relocatable: images/heroku.jpg}"></a>
+    <hr/>
+    <span class="copy">©2011-2012 Michael Fogus and Chris Houser</span> 
+  </footer><!-- #footer -->
+  </div><!-- #wrapper -->
+  
+  <script type="text/javascript"> 
+    var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+    document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+  </script> 
+  <script type="text/javascript"> 
+    try {
+      var pageTracker = _gat._getTracker("UA-921112-2");
+      pageTracker._trackPageview();
+    } catch(err) {}</script>
 </body>
 </html>
+
